[gd_scene load_steps=41 format=3 uid="uid://cpwkiat8gdec0"]

[ext_resource type="Script" path="res://scenes/BATTLE/scene_battle.gd" id="1_feyyh"]
[ext_resource type="Texture2D" uid="uid://cw5lh7pl76vd1" path="res://assets/BATTLE/BG_небо задний фон.png" id="2_6vj7v"]
[ext_resource type="Script" path="res://scenes/GLOBAL/dashes_sprite.gd" id="2_gb0x2"]
[ext_resource type="Texture2D" uid="uid://cyf4y0f0kyn7y" path="res://assets/BATTLE/BG_guide.png" id="2_ik5r5"]
[ext_resource type="Texture2D" uid="uid://drrk4keyx10gy" path="res://assets/BATTLE/BG_земля для фона.png" id="3_gkyyw"]
[ext_resource type="Texture2D" uid="uid://dxb3ukwwjwnhd" path="res://assets/BATTLE/ICON_health.png" id="3_pes5v"]
[ext_resource type="Texture2D" uid="uid://wlc2u8v7ybyx" path="res://assets/WORLD/ENV_grass_black_1.png" id="4_kygaf"]
[ext_resource type="Texture2D" uid="uid://byuu7ik4xd8ld" path="res://assets/BATTLE/BG_кусты задний фон.png" id="4_u8f4j"]
[ext_resource type="Texture2D" uid="uid://65rncxihalmp" path="res://assets/BATTLE/ICON_mana.png" id="4_yfacw"]
[ext_resource type="Texture2D" uid="uid://dwwvj4337jlpe" path="res://assets/BATTLE/ICON_protection.png" id="5_855ts"]
[ext_resource type="Texture2D" uid="uid://dy5k2scqpd32v" path="res://assets/WORLD/ENV_grass_black_2.png" id="5_udxv4"]
[ext_resource type="Texture2D" uid="uid://j5vhjj8qyw50" path="res://assets/WORLD/ENV_grass_black_3.png" id="6_8pjua"]
[ext_resource type="Texture2D" uid="uid://ckf61rpjckemf" path="res://assets/BATTLE/ICON_damage.png" id="6_qnkgq"]
[ext_resource type="Texture2D" uid="uid://b26qar3l1uscx" path="res://assets/WORLD/ENV_grass_black_4.png" id="7_1qj0e"]
[ext_resource type="Texture2D" uid="uid://cyrgu0ivwsyt5" path="res://assets/BATTLE/ICON_speed.png" id="7_krfy6"]
[ext_resource type="Texture2D" uid="uid://cpbrnt7if6556" path="res://assets/BATTLE/ICON_luck.png" id="8_jycb2"]
[ext_resource type="Texture2D" uid="uid://cfnsyuw3jmy61" path="res://assets/WORLD/ENV_grass_black_5.png" id="8_xo45o"]
[ext_resource type="Texture2D" uid="uid://brjn1il1ky6xl" path="res://assets/WORLD/ENV_grass_black_6.png" id="9_de823"]
[ext_resource type="Texture2D" uid="uid://cgs5vf0ea7f8j" path="res://assets/WORLD/ENV_grass_black_7.png" id="10_n2pws"]
[ext_resource type="PackedScene" uid="uid://0w2kir3xkrn3" path="res://scenes/BATTLE/BTLPLAYER.tscn" id="15_ptksl"]
[ext_resource type="Texture2D" uid="uid://qb6v5x4yk2f6" path="res://assets/BATTLE/UI_серая рамка.png" id="22_sjobb"]
[ext_resource type="Texture2D" uid="uid://dkgrj8udrcyux" path="res://assets/BATTLE/UI_коричневая.png" id="22_v1d4s"]
[ext_resource type="Texture2D" uid="uid://cbu6rga2b565q" path="res://assets/BATTLE/ICON_Кнопка инвентарь.png" id="23_0h6k8"]
[ext_resource type="Texture2D" uid="uid://dyx4p50kff8fu" path="res://assets/BATTLE/UI_серая рамка (hover).png" id="23_gdpmt"]
[ext_resource type="Texture2D" uid="uid://chxbnig8mwc8f" path="res://assets/BATTLE/ICON_кнопка настройки.png" id="23_p3fsu"]
[ext_resource type="Texture2D" uid="uid://qr5j70adw4e7" path="res://assets/BATTLE/UI_белая рамка.png" id="24_7wen7"]
[ext_resource type="Texture2D" uid="uid://0n677df4ik7o" path="res://assets/BATTLE/UI_серая рамка (pressed).png" id="24_gkquw"]
[ext_resource type="Texture2D" uid="uid://ddd3a8s7trmcb" path="res://assets/BATTLE/BG_stars.png" id="24_x02or"]
[ext_resource type="Texture2D" uid="uid://bifp84hoajyfr" path="res://assets/BATTLE/ICON_Кнопка сбежать.png" id="25_pq12p"]
[ext_resource type="Texture2D" uid="uid://b87gt7s3n8hxx" path="res://assets/MENU/UI_Паралакс1.png" id="30_jjjan"]
[ext_resource type="Texture2D" uid="uid://76y7324vwqc1" path="res://assets/BATTLE/UI_пустая полоска чего-то.png" id="31_6fem8"]
[ext_resource type="Texture2D" uid="uid://b102ijivlqdxt" path="res://assets/BATTLE/ICON_иконка здоровье Никто.png" id="31_fn7hf"]
[ext_resource type="Texture2D" uid="uid://dck216ejscwsc" path="res://assets/BATTLE/UI_полоска здоровья Никто.png" id="31_vd3dj"]
[ext_resource type="Texture2D" uid="uid://b46ggjuee4jfd" path="res://assets/BATTLE/UI_пояс вооружения.png" id="33_y773e"]
[ext_resource type="Texture2D" uid="uid://byq3n0ie2ew3r" path="res://assets/BATTLE/ICON_желтая пуля.png" id="35_hj1my"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_swpeg"]
texture = ExtResource("22_sjobb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d7ya1"]
texture = ExtResource("22_v1d4s")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cw5h6"]
texture = ExtResource("23_gdpmt")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wdfru"]
texture = ExtResource("24_gkquw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_scfhs"]
texture = ExtResource("24_7wen7")

[node name="FightScene" type="Node"]
script = ExtResource("1_feyyh")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="НебоЗаднийФон" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6vj7v")
expand_mode = 1

[node name="ЗемляДляФона" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -336.0
offset_right = 880.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_gkyyw")
expand_mode = 1

[node name="КустыЗаднийФон" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -336.0
offset_right = 880.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_u8f4j")
expand_mode = 1

[node name="Papers" type="Sprite2D" parent="Background"]
process_mode = 3
visible = false
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_ik5r5")
centered = false
script = ExtResource("2_gb0x2")

[node name="Enviroment" type="Node2D" parent="Background"]
visible = false

[node name="GrassBlack1" type="Sprite2D" parent="Background/Enviroment"]
position = Vector2(79, 277)
texture = ExtResource("4_kygaf")

[node name="GrassBlack2" type="Sprite2D" parent="Background/Enviroment"]
position = Vector2(202, 454)
texture = ExtResource("5_udxv4")

[node name="GrassBlack3" type="Sprite2D" parent="Background/Enviroment"]
position = Vector2(580, 255)
texture = ExtResource("6_8pjua")

[node name="GrassBlack4" type="Sprite2D" parent="Background/Enviroment"]
position = Vector2(1045, 459)
texture = ExtResource("7_1qj0e")

[node name="GrassBlack5" type="Sprite2D" parent="Background/Enviroment"]
position = Vector2(1009, 289)
texture = ExtResource("8_xo45o")

[node name="GrassBlack6" type="Sprite2D" parent="Background/Enviroment"]
position = Vector2(398, 469)
texture = ExtResource("9_de823")

[node name="GrassBlack7" type="Sprite2D" parent="Background/Enviroment"]
position = Vector2(865, 570)
texture = ExtResource("10_n2pws")

[node name="BgStars" type="Sprite2D" parent="Background/Enviroment"]
position = Vector2(1016, 72)
texture = ExtResource("24_x02or")
hframes = 2
vframes = 6
script = ExtResource("2_gb0x2")

[node name="BgStars2" type="Sprite2D" parent="Background/Enviroment"]
position = Vector2(144, 80)
texture = ExtResource("24_x02or")
hframes = 2
vframes = 6
frame = 2
script = ExtResource("2_gb0x2")

[node name="BgStars3" type="Sprite2D" parent="Background/Enviroment"]
position = Vector2(432, 152)
texture = ExtResource("24_x02or")
hframes = 2
vframes = 6
frame = 4
script = ExtResource("2_gb0x2")

[node name="BgStars4" type="Sprite2D" parent="Background/Enviroment"]
position = Vector2(688, 40)
texture = ExtResource("24_x02or")
hframes = 2
vframes = 6
frame = 6
script = ExtResource("2_gb0x2")

[node name="BgStars5" type="Sprite2D" parent="Background/Enviroment"]
position = Vector2(320, 40)
texture = ExtResource("24_x02or")
hframes = 2
vframes = 6
frame = 8
script = ExtResource("2_gb0x2")

[node name="BgStars6" type="Sprite2D" parent="Background/Enviroment"]
position = Vector2(600, 128)
texture = ExtResource("24_x02or")
hframes = 2
vframes = 6
frame = 10
script = ExtResource("2_gb0x2")

[node name="EnemyPivot" type="Marker2D" parent="."]
position = Vector2(832, 400)

[node name="PlayerPivot" type="Marker2D" parent="."]
position = Vector2(258, 340)

[node name="BattlePlayer" parent="PlayerPivot" instance=ExtResource("15_ptksl")]

[node name="GUI" type="CanvasLayer" parent="."]
layer = 0

[node name="Info" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TurnLabel" type="Label" parent="GUI/Info"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -252.0
offset_right = 123.5
offset_bottom = -190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 46
text = "Ход игрока"

[node name="PlayerStats" type="HBoxContainer" parent="GUI/Info"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 106.0
offset_bottom = 166.0

[node name="Icons" type="VBoxContainer" parent="GUI/Info/PlayerStats"]
layout_mode = 2

[node name="Health" type="TextureRect" parent="GUI/Info/PlayerStats/Icons"]
layout_mode = 2
size_flags_vertical = 7
texture = ExtResource("3_pes5v")
expand_mode = 2

[node name="Mana" type="TextureRect" parent="GUI/Info/PlayerStats/Icons"]
layout_mode = 2
size_flags_vertical = 7
texture = ExtResource("4_yfacw")
expand_mode = 2

[node name="Protection" type="TextureRect" parent="GUI/Info/PlayerStats/Icons"]
layout_mode = 2
size_flags_vertical = 7
texture = ExtResource("5_855ts")
expand_mode = 2

[node name="Damage" type="TextureRect" parent="GUI/Info/PlayerStats/Icons"]
layout_mode = 2
size_flags_vertical = 7
texture = ExtResource("6_qnkgq")
expand_mode = 2

[node name="Speed" type="TextureRect" parent="GUI/Info/PlayerStats/Icons"]
layout_mode = 2
size_flags_vertical = 7
texture = ExtResource("7_krfy6")
expand_mode = 2

[node name="Luck" type="TextureRect" parent="GUI/Info/PlayerStats/Icons"]
layout_mode = 2
size_flags_vertical = 7
texture = ExtResource("8_jycb2")
expand_mode = 2

[node name="Strings" type="VBoxContainer" parent="GUI/Info/PlayerStats"]
layout_mode = 2

[node name="Health" type="Label" parent="GUI/Info/PlayerStats/Strings"]
layout_mode = 2
size_flags_vertical = 7
text = "Здоровье"
vertical_alignment = 1

[node name="Mana" type="Label" parent="GUI/Info/PlayerStats/Strings"]
layout_mode = 2
size_flags_vertical = 7
text = "Мана"
vertical_alignment = 1

[node name="Protection" type="Label" parent="GUI/Info/PlayerStats/Strings"]
layout_mode = 2
size_flags_vertical = 7
text = "Защита"
vertical_alignment = 1

[node name="Damage" type="Label" parent="GUI/Info/PlayerStats/Strings"]
layout_mode = 2
size_flags_vertical = 7
text = "Сила"
vertical_alignment = 1

[node name="Speed" type="Label" parent="GUI/Info/PlayerStats/Strings"]
layout_mode = 2
size_flags_vertical = 7
text = "Скорость"
vertical_alignment = 1

[node name="Luck" type="Label" parent="GUI/Info/PlayerStats/Strings"]
layout_mode = 2
size_flags_vertical = 7
text = "Удача"
vertical_alignment = 1

[node name="Values" type="VBoxContainer" parent="GUI/Info/PlayerStats"]
layout_mode = 2

[node name="Health" type="Label" parent="GUI/Info/PlayerStats/Values"]
layout_mode = 2
size_flags_vertical = 7
text = "999
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mana" type="Label" parent="GUI/Info/PlayerStats/Values"]
layout_mode = 2
size_flags_vertical = 7
text = "999
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Protection" type="Label" parent="GUI/Info/PlayerStats/Values"]
layout_mode = 2
size_flags_vertical = 7
text = "999
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Damage" type="Label" parent="GUI/Info/PlayerStats/Values"]
layout_mode = 2
size_flags_vertical = 7
text = "999
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speed" type="Label" parent="GUI/Info/PlayerStats/Values"]
layout_mode = 2
size_flags_vertical = 7
text = "999
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Luck" type="Label" parent="GUI/Info/PlayerStats/Values"]
layout_mode = 2
size_flags_vertical = 7
text = "999
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyStats" type="HBoxContainer" parent="GUI/Info"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_top = 8.0
offset_right = -12.0
offset_bottom = 166.0
grow_horizontal = 0
alignment = 2

[node name="Values" type="VBoxContainer" parent="GUI/Info/EnemyStats"]
layout_mode = 2

[node name="Health" type="Label" parent="GUI/Info/EnemyStats/Values"]
layout_mode = 2
size_flags_vertical = 7
text = "99
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mana" type="Label" parent="GUI/Info/EnemyStats/Values"]
layout_mode = 2
size_flags_vertical = 7
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Protection" type="Label" parent="GUI/Info/EnemyStats/Values"]
layout_mode = 2
size_flags_vertical = 7
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Damage" type="Label" parent="GUI/Info/EnemyStats/Values"]
layout_mode = 2
size_flags_vertical = 7
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speed" type="Label" parent="GUI/Info/EnemyStats/Values"]
layout_mode = 2
size_flags_vertical = 7
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Luck" type="Label" parent="GUI/Info/EnemyStats/Values"]
layout_mode = 2
size_flags_vertical = 7
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Strings" type="VBoxContainer" parent="GUI/Info/EnemyStats"]
layout_mode = 2

[node name="Health" type="Label" parent="GUI/Info/EnemyStats/Strings"]
layout_mode = 2
size_flags_vertical = 7
text = "Здоровье"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Mana" type="Label" parent="GUI/Info/EnemyStats/Strings"]
layout_mode = 2
size_flags_vertical = 7
text = "Мана"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Protection" type="Label" parent="GUI/Info/EnemyStats/Strings"]
layout_mode = 2
size_flags_vertical = 7
text = "Защита"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Damage" type="Label" parent="GUI/Info/EnemyStats/Strings"]
layout_mode = 2
size_flags_vertical = 7
text = "Сила"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Speed" type="Label" parent="GUI/Info/EnemyStats/Strings"]
layout_mode = 2
size_flags_vertical = 7
text = "Скорость"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Luck" type="Label" parent="GUI/Info/EnemyStats/Strings"]
layout_mode = 2
size_flags_vertical = 7
text = "Удача"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Icons" type="VBoxContainer" parent="GUI/Info/EnemyStats"]
layout_mode = 2

[node name="Health" type="TextureRect" parent="GUI/Info/EnemyStats/Icons"]
layout_mode = 2
size_flags_vertical = 7
texture = ExtResource("3_pes5v")
expand_mode = 2

[node name="Mana" type="TextureRect" parent="GUI/Info/EnemyStats/Icons"]
layout_mode = 2
size_flags_vertical = 7
texture = ExtResource("4_yfacw")
expand_mode = 2

[node name="Protection" type="TextureRect" parent="GUI/Info/EnemyStats/Icons"]
layout_mode = 2
size_flags_vertical = 7
texture = ExtResource("5_855ts")
expand_mode = 2

[node name="Damage" type="TextureRect" parent="GUI/Info/EnemyStats/Icons"]
layout_mode = 2
size_flags_vertical = 7
texture = ExtResource("6_qnkgq")
expand_mode = 2

[node name="Speed" type="TextureRect" parent="GUI/Info/EnemyStats/Icons"]
layout_mode = 2
size_flags_vertical = 7
texture = ExtResource("7_krfy6")
expand_mode = 2

[node name="Luck" type="TextureRect" parent="GUI/Info/EnemyStats/Icons"]
layout_mode = 2
size_flags_vertical = 7
texture = ExtResource("8_jycb2")
expand_mode = 2

[node name="Hotbar" type="HBoxContainer" parent="GUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -432.0
offset_top = -512.0
offset_right = -208.0
offset_bottom = -440.0
grow_horizontal = 2
grow_vertical = 0

[node name="Skills" type="HBoxContainer" parent="GUI/Hotbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SkillButton_1" type="Button" parent="GUI/Hotbar/Skills"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_swpeg")
text = "?"
icon_alignment = 1

[node name="Icon" type="TextureRect" parent="GUI/Hotbar/Skills/SkillButton_1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 2
stretch_mode = 5

[node name="SkillButton_2" type="Button" parent="GUI/Hotbar/Skills"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_swpeg")
text = "?"

[node name="Icon" type="TextureRect" parent="GUI/Hotbar/Skills/SkillButton_2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 2
stretch_mode = 5

[node name="SkillButton_3" type="Button" parent="GUI/Hotbar/Skills"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_swpeg")
text = "?"

[node name="Icon" type="TextureRect" parent="GUI/Hotbar/Skills/SkillButton_3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 2
stretch_mode = 5

[node name="InventoryButton" type="Button" parent="GUI"]
custom_minimum_size = Vector2(32, 32)
offset_left = 352.0
offset_top = 576.0
offset_right = 408.0
offset_bottom = 632.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxTexture_d7ya1")

[node name="Icon" type="TextureRect" parent="GUI/InventoryButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("23_0h6k8")
expand_mode = 2
stretch_mode = 4

[node name="PauseButton" type="Button" parent="GUI"]
process_mode = 3
offset_left = 1072.0
offset_top = 8.0
offset_right = 1144.0
offset_bottom = 80.0
theme_override_styles/normal = SubResource("StyleBoxTexture_swpeg")
theme_override_styles/hover = SubResource("StyleBoxTexture_cw5h6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wdfru")
icon_alignment = 1
expand_icon = true

[node name="Icon" type="TextureRect" parent="GUI/PauseButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_right = 8.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("23_p3fsu")
expand_mode = 2
stretch_mode = 5

[node name="RunButton" type="Button" parent="GUI"]
offset_left = 352.0
offset_top = 520.0
offset_right = 408.0
offset_bottom = 576.0
theme_override_styles/normal = SubResource("StyleBoxTexture_scfhs")
icon_alignment = 1
expand_icon = true

[node name="Icon" type="TextureRect" parent="GUI/RunButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -22.0
offset_top = -3.0
offset_right = 18.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("25_pq12p")
expand_mode = 2
stretch_mode = 5

[node name="Panel" type="TextureRect" parent="GUI"]
offset_left = 16.0
offset_top = 520.0
offset_right = 352.0
offset_bottom = 632.0
texture = ExtResource("30_jjjan")
expand_mode = 1
stretch_mode = 1

[node name="VContainer" type="VBoxContainer" parent="GUI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthContainer" type="HBoxContainer" parent="GUI/Panel/VContainer"]
layout_mode = 2
theme_override_constants/separation = -20

[node name="Icon" type="TextureRect" parent="GUI/Panel/VContainer/HealthContainer"]
layout_mode = 2
texture = ExtResource("31_fn7hf")
stretch_mode = 5

[node name="HealthBar" type="TextureProgressBar" parent="GUI/Panel/VContainer/HealthContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0
step = 0.5
value = 6.0
nine_patch_stretch = true
texture_under = ExtResource("31_6fem8")
texture_progress = ExtResource("31_vd3dj")

[node name="Bullets" type="TextureRect" parent="GUI/Panel/VContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("33_y773e")
expand_mode = 1

[node name="BulletsContainer" type="HBoxContainer" parent="GUI/Panel/VContainer/Bullets"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Bullet_1" type="TextureRect" parent="GUI/Panel/VContainer/Bullets/BulletsContainer"]
layout_mode = 2
texture = ExtResource("35_hj1my")
expand_mode = 3
stretch_mode = 4

[node name="Bullet_2" type="TextureRect" parent="GUI/Panel/VContainer/Bullets/BulletsContainer"]
layout_mode = 2
texture = ExtResource("35_hj1my")
expand_mode = 3
stretch_mode = 4

[node name="Bullet_3" type="TextureRect" parent="GUI/Panel/VContainer/Bullets/BulletsContainer"]
layout_mode = 2
texture = ExtResource("35_hj1my")
expand_mode = 3
stretch_mode = 4

[node name="Bullet_4" type="TextureRect" parent="GUI/Panel/VContainer/Bullets/BulletsContainer"]
layout_mode = 2
texture = ExtResource("35_hj1my")
expand_mode = 3
stretch_mode = 4

[node name="Bullet_5" type="TextureRect" parent="GUI/Panel/VContainer/Bullets/BulletsContainer"]
layout_mode = 2
texture = ExtResource("35_hj1my")
expand_mode = 3
stretch_mode = 4

[node name="Bullet_6" type="TextureRect" parent="GUI/Panel/VContainer/Bullets/BulletsContainer"]
layout_mode = 2
texture = ExtResource("35_hj1my")
expand_mode = 3
stretch_mode = 4
